--- a/src/content/posts/态势感知.md
+++ b/src/content/posts/态势感知.md
@@ -26,7 +26,7 @@ draft: false
 
 ## 2.网络空间态势感知
 
-网络空间态势感知（Cyberspace Situational Awareness）是指通过收集、分析和解释网络空间中的信息来理解网络环境的能力。这种能力旨在帮助组织和个人识别和理解网络中的威胁、漏洞和活动，以及评估这些威胁对其系统和数据的潜在影响。网络空间态势感知是网络安全和网络防御中至关重要的一环，它可以帮助组织及时发现和应对网络攻击、恶意活动和异常行为。
+Tim Bass 提出的网络安全态势感知概念是指对网络安全环境进行实时监测、分析和评估，以便及时发现、理解和应对网络安全威胁和风险的能力。通过网络安全态势感知，组织可以更加敏锐地识别潜在的威胁，并采取预防措施，从而提高网络安全性和应对能力。
 
 ## 3.安德斯雷模型（摘自Wiki）
 
