--- a/src/content/posts/知识图谱.md
+++ b/src/content/posts/知识图谱.md
@@ -76,3 +76,19 @@ draft: false
 ### 旋转模型
 
 旋转模型把关系当作头实体和尾实体之间的旋转，包括RotatE、QuatE、DihEdral等模型。
+
+## 6.模型评价指标（来自ChatGPT）
+
+1. **MEAN（Mean Rank）**：平均排名，用于评估知识图谱嵌入模型在链接预测任务中的性能。MEAN指标衡量了模型在给定一组测试三元组（实体之间的关系）时，预测的关系排名的平均值。通常情况下，对于链接预测任务来说，希望模型能够将正确的关系排名得越高越好，因此MEAN指标越小越好。
+2. **HITS@N**：在链接预测任务中，HITS（Hierarchical Clustering-based on Influence Similitude）指标是指在给定前N个候选关系时，模型正确预测的比例。例如，HITS@1表示模型在给定的候选关系中，将正确的关系排在第一位的比例；HITS@10表示模型在给定的候选关系中，将正确的关系排在前10位的比例。在实际应用中，通常会关注HITS@N中N的选择，以及模型在不同N值下的表现。
+
+## 7.采样方法
+
+不同的采样方法可以影响模型的训练效果和性能，因此在实验和比较中经常会对它们进行分析。
+
+- **unif.**
+  - 表示使用均匀采样（uniform sampling）
+  - 在训练过程中，随机选择负样本时，所有的实体和关系具有相同的概率被选为负样本。
+- **bern.**
+  - 这表示使用伯努利采样（Bernoulli sampling）
+  - 在训练过程中，选择负样本时，实体和关系的选择概率会根据它们在数据集中出现的频率进行调整，以提高负样本选择的效率。
