--- a/src/content/posts/概念笔记.md
+++ b/src/content/posts/概念笔记.md
@@ -7,7 +7,7 @@ category: 网络安全
 draft: false
 ---
 
-# 一些小概念
+# 概念
 
 ## 1.APT（Advanced Persistent Threat）高级持续威胁
 
@@ -15,24 +15,139 @@ draft: false
 
 **特点**：高级性（攻击的人能力强）、持续性（持续攻击）、目标性（攻击有目的）
 
-## 2.TransH（Translating on Hyperplanes）
-
-**定义**：是一种知识图谱嵌入算法，它的核心思想是将知识图谱中的实体和关系映射到低维的连续向量空间中，并通过在向量空间中的运算来表示实体之间的关联关系。
-
-## 3.C&C服务器（command & control Sever）
+## 2.C&C服务器（command & control Sever）
 
 - C＆C 服务器是由攻击者的计算机将命令发送到受恶意软件入侵的系统，并从目标网络接收被盗的数据。
 - 值得一提，现在已经发现许多c&c服务器为IDC服务器以及使用基于云的服务，例如网络邮件和文件共享服务，**因为C＆C服务器可以与正常流量融合在一起并避免被检测到**。
 
-## 4.IDC服务器（Internet Data Center）互联网数据中心
+## 3.IDC服务器（Internet Data Center）互联网数据中心
 
 **定义**：互联网数据中心是指专门**用于存储、处理和传输网络数据的设施**，通常由大型互联网公司、电信运营商或云服务提供商管理和运营。
 
 **特点**：IDC服务器通常具**有高性能、高可靠性和高可扩展性**，以满足不同规模和类型的互联网应用需求。
 
-## 5.IOC（Indicator ofCompromise, IOC）攻击指征
+## 4.IOC（Indicator ofCompromise, IOC）攻击指征
 
 **定义**：威胁指标是指在网络中发现的可能表**明系统已被入侵或受到攻击的标志或迹象**。这些标志可能是特定的文件**哈希值、IP地址、域名、URL、恶意软件**特征等，用于指示系统可能存在安全威胁或受到了攻击。
+
+## 5.D-S(Dempster-Shafer Evidence Theory)D-S证据理论
+
+**定义**：D-S证据理论是一种用于处理不确定性和不完全信息的数学理论，由Glenn Shafer和Arthur P. Dempster在20世纪70年代提出。这个理论提供了一种框架，可以用来推断和处理关于某个事件或假设的概率，即使在面对不完全信息或模糊证据的情况下也能够做出合理的推断。
+
+**关键概念**
+
+- **基本概率分配（Basic Probability Assignment, BPA）**
+- **合成运算（Combination Rule）**
+- **置信度函数（Belief Function）**
+- **可信度函数（Plausibility Function）**
+
+## 6.匿名网络
+
+**定义**：一种通过隐藏用户的真实身份和位置信息来保护其隐私的网络。
+
+**网络的分类**
+
+- **明网**：能被普通搜索引擎检索到的网络
+- **深网**：内容不能被普通搜索引擎检索到的网络，需要账号密码、访问权限等才可以访问，如学校的数据库，公司的线上仓库等
+- **暗网**：属于深网中的一部分，**需要通过特定的浏览器、特殊授权或者特殊设置才能连接上的网络，普通的浏览器和搜索引擎无法进入。**
+
+**Tor网络**
+
+Tor（The Onion Router）网络是一个匿名网络，旨在提供用户隐私和匿名性的保护。它通过使用多层代理节点来隐藏用户的身份和位置信息。
+
+- **工作原理**：
+  - 用户的tor软件或者客户端在tor网络中增量地建立一条加密线路。这条线路每次只扩展一跳，而且每次扩展的中继点只知道数据来自哪个中继点，数据将要被发送到哪个中继点去。
+  - 没有任何一个中继点知道整条线路。客户端与每一跳都协商了一组独立的密钥来保证每一跳不能追踪走过的中继点。
+
+
+
+**Mix网络**
+
+Mix网络是另一种匿名网络，类似于Tor网络，旨在提供用户隐私和匿名性的保护。与Tor网络不同的是，Mix网络使用了一种称为“Mixes”的特殊节点来提供匿名化服务。
+
+在Mix网络中，用户发送的数据会被加密，并通过多个Mix节点进行转发。每个Mix节点负责解密一层加密，并重新加密以发送到下一个Mix节点，这样，数据的真实来源和目的地就被隐藏了。
+
+Mix网络被广泛用于需要更高级别匿名性和隐私保护的场景，如敏感通信或政治活动。
+
+
+
+## 7.灰色理论
+
+又称为灰色系统理论。该理论的提出是为了解决数据缺乏、信息不完备或不确定性较大的问题，尤其适用于中小样本、不完全信息或缺乏历史数据的情况。
+
+灰色理论的核心思想是将研究对象划分为“白色”和“黑色”两部分。
+
+- 其中，“白色”指已知的信息，即已知的数据
+
+- 而“黑色”指未知的信息，即缺乏的数据。
+
+- 而“灰色”则指介于“白色”和“黑色”之间的信息，即部分已知部分未知的数据。
+
+  通过对“灰色”信息的分析和处理，可以进行预测、决策等工作。
+
+## 8.IaaS、PaaS、SaaS
+
+- IaaS（Infrastructure as a Service）基础架构即服务
+
+  提供了基础的计算资源，包括虚拟化的服务器、存储空间、网络等基础设施，用户可以通过云服务提供商的平台按需使用这些资源，而不需要购买、维护自己的物理设备。（云服务器）
+
+- PaaS（Platform as a Service）平台即服务
+
+  PaaS提供了一个用于开发、测试、部署和管理应用程序的平台环境，包括开发工具、应用程序框架、数据库管理系统等。使用PaaS的用户可以在云端快速构建和部署应用程序，而无需关注底层的基础设施管理，这使得开发团队可以更专注于应用程序的开发和创新。（Google Cloud AI Platform）
+
+- SaaS（Software as a Service）软件即服务
+
+  SaaS是一种通过云计算模式提供软件应用程序的服务形式，用户通过互联网访问应用程序，而不需要安装、维护软件本身。在SaaS模式下，软件提供商负责管理和维护应用程序的基础设施、安全性、性能等方面，用户只需按需订阅即可使用软件，并且通常以订阅费用的形式付费。（Microsoft Office 365，外包软件管理平台）
+
+## 9.蜜罐技术Honeypot
+
+Honeypots are systems designed to deceive attackers into believing they are interacting with a real information asset in order to understand attacker behaviour and intentions.
+
+蜜罐系统旨在欺骗攻击者，使其相信他们正在与真实的信息资产进行交互，从而了解攻击者的行为和意图
+
+## 10.进化计算Evolutionary Computation, EC
+
+
+
+## 11.ICT
+
+信息通讯技术，该术语通常被认为是指所有的设备, 网络组件 ，应用程序和系统
+
+## 12.BYOD策略
+
+BYOD 意为“Bring Your Own Device”，翻译为“自带设备”。它是一种企业策略，允许员工在工作场所使用自己拥有的个人电子设备（例如智能手机、平板电脑、笔记本电脑）来进行工作任务和访问公司网络和资源。
+
+## 13.MDR
+
+Managed (Threat) Detection and Response system管理(威胁)检测和响应系统
+
+the MDR integrates two important threat detection and prevention systems as follows:
+
+- **Intrusion (Detection &) Prevention System (IDPS/IPS)**: an IDPS/IPS is an intrusion detection and prevention system. The IDPS/IPS works in conjunction with one or more Intrusion Detection Systems (IDS)
+
+  **入侵检测和防御系统(IDPS/IPS)**: IDPS/IPS是一种入侵检测和防御系统。IDPS/IPS与一个或多个入侵检测系统(IDS)协同工作。
+
+- **Endpoint Detection & Response system (EDR)**: The role of an EDR system is to secure the endpoints. Modern EDR also integrates the Host IDS (HIDS), besides the **Endpoint Protection Platform (EPP)**, and **Advanced Threat Protection (ATP)**
+
+  **端点检测与响应系统(EDR)**: EDR系统的作用是保护端点。除了端**点防护平台(Endpoint Protection Platform, EPP)**和**高级威胁防护(Advanced Threat Protection, ATP)**，现代EDR还集成了主机入侵防御(HIDS)。
+
+# 网络攻击名词
+
+## 1.U2R
+
+User to Root，旨在将攻击者的权限从普通用户级别提升到系统管理员（root）级别或等效权限。在这种攻击中，攻击者通常利用操作系统或应用程序中的漏洞或弱点，以获取对系统更高级别的访问权限。
+
+**就是搞到服务器管理员权限**
+
+## 2.R2L
+
+Remote to Local，攻击者通过远程访问系统的网络服务或应用程序，试图获取本地用户权限或执行本地操作。
+
+**外网控制内网**
+
+
+
+
 
 
 
