--- a/src/content/posts/态势感知.md
+++ b/src/content/posts/态势感知.md
@@ -26,12 +26,12 @@ draft: false
 
 ## 2.网络空间态势感知
 
-Tim Bass 提出的网络安全态势感知概念是指对网络安全环境进行实时监测、分析和评估，以便及时发现、理解和应对网络安全威胁和风险的能力。通过网络安全态势感知，组织可以更加敏锐地识别潜在的威胁，并采取预防措施，从而提高网络安全性和应对能力。
+网络空间态势感知（Cyberspace Situational Awareness）是指通过收集、分析和解释网络空间中的信息来理解网络环境的能力。这种能力旨在帮助组织和个人识别和理解网络中的威胁、漏洞和活动，以及评估这些威胁对其系统和数据的潜在影响。网络空间态势感知是网络安全和网络防御中至关重要的一环，它可以帮助组织及时发现和应对网络攻击、恶意活动和异常行为。
 
 ## 3.安德斯雷模型（摘自Wiki）
 
-**第一级SA——感知**：达至SA的第一步是感知对环境中相关元素的状态、属性和动向。因此，最基本的SA包括了监察、侦察线索及简单的辨认，以致意识到多个情境元素（物件、事件、人、系统、环境因素）及它们目前的状态（地点、境况、模式、动作）。
+**第一级SA——感知：**达至SA的第一步是感知对环境中相关元素的状态、属性和动向。因此，最基本的SA包括了监察、侦察线索及简单的辨认，以致意识到多个情境元素（物件、事件、人、系统、环境因素）及它们目前的状态（地点、境况、模式、动作）。
 
-**第二级SA——理解**：SA的下一阶段包含了模式辨认、解释和评价，把还没有关联的第一级SA的元素综合起来。第二级SA需要把资讯整合起来，并明白它会怎样对目的和目标做成影响。这包括了发展出一幅对所关注的事物的整体画面。
+**第二级SA——理解：**SA的下一阶段包含了模式辨认、解释和评价，把还没有关联的第一级SA的元素综合起来。第二级SA需要把资讯整合起来，并明白它会怎样对目的和目标做成影响。这包括了发展出一幅对所关注的事物的整体画面。
 
-**第三级SA——预测**：第三及最高级别的SA包括了对环境元素的未来动向作出投影。第三级SA需要同时先获得状态、动向及情况的理解（第一及二级SA），然后将这个资讯在时间上往前推以判断它会怎样影响操作环境的未来。
+**第三级SA——预测：**第三及最高级别的SA包括了对环境元素的未来动向作出投影。第三级SA需要同时先获得状态、动向及情况的理解（第一及二级SA），然后将这个资讯在时间上往前推以判断它会怎样影响操作环境的未来。
