--- a/src/content/posts/第一节.md
+++ b/src/content/posts/第一节.md
@@ -77,3 +77,11 @@ MDP代表“马尔可夫决策过程”（Markov Decision Process）。这是一
 在普通中学努力学习，考上好大学的概率为60%，不努力概率为20%。
 
 在MDP中，我们一般假定链的长度是有限的，并且一般不会太长。
+
+
+
+# 课程来源
+
+西湖大学——赵世钰
+
+[B站课程链接](https://www.bilibili.com/video/BV1sd4y167NS/)
