--- a/src/content/posts/态势感知.md
+++ b/src/content/posts/态势感知.md
@@ -35,3 +35,21 @@ draft: false
 **第二级SA——理解：**SA的下一阶段包含了模式辨认、解释和评价，把还没有关联的第一级SA的元素综合起来。第二级SA需要把资讯整合起来，并明白它会怎样对目的和目标做成影响。这包括了发展出一幅对所关注的事物的整体画面。
 
 **第三级SA——预测：**第三及最高级别的SA包括了对环境元素的未来动向作出投影。第三级SA需要同时先获得状态、动向及情况的理解（第一及二级SA），然后将这个资讯在时间上往前推以判断它会怎样影响操作环境的未来。
+
+
+
+## 4.NSSA的示例
+
+网络安全态势感知(network security situation awareness,简称 NSSA)，图来源[网络安全态势认知融合感控模型 (jos.org.cn)](https://www.jos.org.cn/jos/article/abstract/4852)
+
+![image-20240515094913479](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240515094913479.png)
+
+该模型包括 4 个层次,分别是网络认知层、主机认知层、服务认知层和跨层结构.网络认知层包括路由器、
+交换机等运行协议栈的网络实体,并包含位于该层的各种流量传感器、NIDS、防火墙等类型的安全部件;而主
+机认知层主要由网络和计算系统的软硬件资源构成,并包含了 HIDS、日志分析等各类传感器;服务认知层主要
+包含网络系统所提供的各种服务,也包括支撑系统运行的策略、用户接口、检测和管理服务运行状态的传感器
+等;在该模型中,跨层结构是区别于传统网络结构的关键层次,其既继承现有网络的分层体系和 NSSA 的层次感
+知需求,又能够解决严格层次划分带来的信息流通不畅问题,使信息在安全系统的各不相邻层次之间传递,更好
+地应对复杂网络威胁,其核心是由融合(fusion)、感知(awareness)、决策(decide)和控制(control)组成的 FADC 认知环,并通过组件之间的协作形成闭环反馈控制结构,使 NSSA 具备异构、并发、同步等特性。
+
+![image-20240515100823589](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240515100823589.png)
