--- a/src/content/posts/概念笔记.md
+++ b/src/content/posts/概念笔记.md
@@ -107,7 +107,26 @@ Honeypots are systems designed to deceive attackers into believing they are inte
 
 ## 10.进化计算Evolutionary Computation, EC
 
+源于ChatGPT
 
+### 定义
+
+进化计算（Evolutionary Computation, EC）是一种基于自然进化原理的计算方法，用于解决优化和搜索问题。它模拟生物进化过程中的选择、交叉和变异等机制，以产生优良的解。进化计算的核心思想是利用自然选择和遗传机制，从一组候选解（种群）中逐代演化出更优解。
+
+### 主要的进化计算方法
+
+1. 遗传算法（Genetic Algorithm, GA）
+   - **描述**：最常见的进化计算方法，使用基因编码的候选解（个体）来进行选择、交叉和变异。
+   - **应用**：广泛用于函数优化、组合优化和机器学习等领域。
+2. 演化策略（Evolution Strategies, ES）
+   - **描述**：主要用于连续参数优化，通过模拟自然进化过程中的变异和选择来优化。
+   - **应用**：常用于工程设计优化和参数调整。
+3. 演化规划（Evolutionary Programming, EP）
+   - **描述**：侧重于个体行为的演化，通常用于复杂系统建模和控制。
+   - **应用**：在自动控制和复杂动态系统优化中有应用。
+4. 遗传编程（Genetic Programming, GP）
+   - **描述**：扩展了遗传算法，通过演化程序（通常表示为树结构）来解决问题。
+   - **应用**：自动化程序设计、机器学习和符号回归
 
 ## 11.ICT
 
@@ -130,6 +149,20 @@ the MDR integrates two important threat detection and prevention systems as foll
 - **Endpoint Detection & Response system (EDR)**: The role of an EDR system is to secure the endpoints. Modern EDR also integrates the Host IDS (HIDS), besides the **Endpoint Protection Platform (EPP)**, and **Advanced Threat Protection (ATP)**
 
   **端点检测与响应系统(EDR)**: EDR系统的作用是保护端点。除了端**点防护平台(Endpoint Protection Platform, EPP)**和**高级威胁防护(Advanced Threat Protection, ATP)**，现代EDR还集成了主机入侵防御(HIDS)。
+
+
+
+## 14.D-S证据理论
+
+D-S证据理论，也称为Dempster-Shafer理论，是一种用于处理不确定性和组合证据的方法，由Arthur P. Dempster和Glenn Shafer在20世纪60年代和70年代发展起来。这种理论在处理不完全和不确定信息时非常有效，被广泛应用于人工智能、决策支持系统和专家系统等领域。
+
+[简单理解D-S证据理论-CSDN博客](https://blog.csdn.net/weixin_45225235/article/details/108704398)
+
+## 15.idependent and identically distributed
+
+独立同分布（independent and identically distributed，i.i.d.）在概率统计理论中，指随机过程中，任何时刻的取值都为随机变量，如果这些随机变量服从同一分布，并且互相独立，那么这些随机变量是独立同分布。
+
+如抛硬币，正反两面出现的概率即为独立同分布
 
 # 网络攻击名词
 
