--- a/src/content/posts/网络情报.md
+++ b/src/content/posts/网络情报.md
@@ -10,6 +10,8 @@ draft: false
 
 源于：面向网络空间安全情报的知识图谱综述  （中国科学院信息工程研究所 ）
 
+DOI：10.19363/J.cnki.cn10-1380/tn.2020.09.05
+
 ## 1.定义
 
 - 网络安全情报（Cybersecurity Intelligence）是指**收集、分析和利用各种信息**来**评估网络威胁和风险**的过程。
@@ -21,7 +23,15 @@ draft: false
 - 网络安全情报可以包括各种类型的信息，如恶意软件样本、网络攻击的特征和模式、攻击者的行为和意图、潜在的漏洞和弱点等
 - 通过收集、分析和利用这些信息，组织可以更好地了解当前的网络威胁和风险，并采取相应的措施来保护其系统和数据免受攻击。
 
-## 3.缺点
+## 3.分类
+
+安全情报用于提升安全分析能力, 主要包括漏洞情报、资产情报以及威胁情报
+
+- 漏洞情报关注于软件、硬件或协议的脆弱性带来的安全威胁
+- 资产情报包括企业或公司内部的软硬件资产以及对资产重要程度的描述信息
+- 威胁情报主要收集与攻击者或攻击行为相关的外部要素, 聚焦于收集、整合、共享威胁信息, 提供安全分析查询和比对的依据, 从而达到对威胁信息的及时管控
+
+## 4.缺点
 
 - 从海量数据中提取高价值的安全情报存在一定难度。当前安全情报主要通过人工提交收录的方式增加数量, 缺
   少从开放网络信息主动生成安全情报的能力。（大海捞针）
