--- a/src/content/posts/第二节.md
+++ b/src/content/posts/第二节.md
@@ -1,6 +1,7 @@
 ---
-title: 强化学习第二节
+title: 强化学习
 published: 2024-05-13
+update: 2024-06-08
 description: 强化学习相关概念
 tags: [概念积累, 网络安全, 强化学习DL]
 category: DL
@@ -11,6 +12,8 @@ draft: false
 ## 1.State Value
 
 $G_t$为一个轨迹的discounted return，则State value就是$G_t$的期望值Expectation
+
+（**简单来说，就是从一点到终点所有轨迹的return的平均值**）
 $$
 v_\pi(s) = \mathbb{E}[G_t|S_t = s]
 \\
@@ -76,11 +79,22 @@ $$
 \begin{aligned}
 v_\pi(s) 
 &= \mathbb{E}[R_{t+1}|S_t=s] +\gamma\mathbb{E}[G_{t+1}|S_t=s], \\
+&= \underbrace{\sum_{a}\pi(a|s)\sum_r p(r|s,a)r}_{当前奖励的平均值} +\underbrace{\gamma \sum_a \pi(a|s)\sum_{s'}p(s'|s,a)v_{\pi}(s')}_{未来奖励的平均值}\\
 &= 	\sum_{a}\pi(a|s) \left[ \sum_{r}p(r|s,a)r+\gamma\sum_{s'}p(s’|s,a)v_{\pi}(s') \right], \forall s\in S.
 
 \end{aligned}
 $$
-描述了不同状态之间的关系，对于所有状态都成立，即一个状态对应一个式子
+描述了不同状态值之间的关系，对于所有状态都成立，即一个状态对应一个式子
+
+矩阵形式
+
+$$
+v_{\pi}(s_i)=r_{\pi}(s_i)+\gamma \sum_{s_j}p_{\pi}(s_j|s_i)v_{\pi}(s_j)
+$$
+
+例子
+
+![image-20240608115405362](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240608115405362.png)
 
 ##  3.Action value
 
@@ -100,6 +114,12 @@ q_\pi(s,a)
 $$
 
 ## **state value 与 action value的区别**
+
+状态值$v_{\pi}(s)$与动作值$q_{\pi}$计算关系
+$$
+v_{\pi}(s)=\sum_{a}\pi(a|s)q_{\pi}(s,a)
+$$
+
 
 - state value: 从一个状态出发得到的平均返回值
 - action value:从一个状态出发，采取一种行动后，得到的平均返回值
