--- a/src/content/posts/第一节.md
+++ b/src/content/posts/第一节.md
@@ -1,9 +1,9 @@
 ---
-title: 强化学习第一节
+title: 强化学习
 published: 2024-05-13
 description: 强化学习相关概念
-tags: [概念积累, 网络安全, 强化学习DL]
-category: DL
+tags: [概念积累, 网络安全, 强化学习RL]
+category: RL
 draft: false
 ---
 # 第一节——基本概念
@@ -18,7 +18,15 @@ draft: false
 
 行动空间**依赖**于状态，即不同状态对应不同的行动空间
 
-## 3.Reward
+## 3.Policy
+
+策略告诉了我们目标(agent)在每一个状态采取的动作，用$\pi$来表示策略
+$$
+\pi(a_1|s_1)=0
+$$
+表示在$s_1$状态下采取动作$a_1$的概率
+
+## 4.Reward
 
 RL中的独有概念，表示目标在行动过后得到的值
 
@@ -26,7 +34,7 @@ RL中的独有概念，表示目标在行动过后得到的值
 - 否则，表示不希望发生这样的行为
 - 0表示什么都没发生
 
-## 4.Trajectory 
+## 5.Trajectory 
 
 轨迹，表示**状态-行动-奖励**链，如下
 $$
@@ -34,7 +42,7 @@ s_1\xrightarrow[r=0]{a_2}s_2\xrightarrow[r=0]{a_3}s_5\xrightarrow[r=0]{a_3}s_8\x
 $$
 
 
-##  5.Return
+##  6.Return
 
 返回值，等于整个轨迹上所有的奖励$r$加在一起的结果、
 
@@ -51,18 +59,29 @@ $$
   - 如果γ趋于0，则discounted return值由前面的reward决定
   - 反之趋于1，由后面的决定
 
-## 6.Episode
+## 7.Episode
 
 - 从开始到停下来时候的状态的轨迹，称为一个Episode
 - Episode通常都是有限步数
 
 
 
-## 7.MDP
+## 8.MDP
+
+### MDP的要素
+
+- 集合Sets:
+  - 状态State
+  - 动作action
+  - 奖励reward
+- 概略分布probability distribution:
+  - 状态变换概率State transion probability:$p(s'|s,a)$表示从状态s采取动作a到达状态s'的概率
+  - 奖励概率reward probability:$p(r|s,a)$表示从状态s采取动作a得到奖励r的概率
+- 策略Policy:$\pi(a|s)$
 
 MDP代表“马尔可夫决策过程”（Markov Decision Process）。这是一个数学框架，用于描述一种随机的动态系统，在这种系统中，代理（通常是一个智能体或机器学习算法）采取行动，然后观察到环境的状态，从而获得奖励。
 
-**马氏过程**
+**马氏过程**（MDP的性质 memoryless property）
 
 简单来说，**对于一个马式过程，当前状态之和上一个状态有关，和之前所有状态都无关**，**即计算当前状态发生的概率，只用上一个状态的取值来计算即可**。
 
@@ -77,11 +96,3 @@ MDP代表“马尔可夫决策过程”（Markov Decision Process）。这是一
 在普通中学努力学习，考上好大学的概率为60%，不努力概率为20%。
 
 在MDP中，我们一般假定链的长度是有限的，并且一般不会太长。
-
-
-
-# 课程来源
-
-西湖大学——赵世钰
-
-[B站课程链接](https://www.bilibili.com/video/BV1sd4y167NS/)
