--- a/src/content/posts/第七节.md
+++ b/src/content/posts/第七节.md
@@ -2,8 +2,8 @@
 title: 强化学习第七节
 published: 2024-05-28
 description: 强化学习相关概念
-tags: [概念积累, 网络安全, 强化学习DL]
-category: DL
+tags: [概念积累, 网络安全, 强化学习RL]
+category: RL
 draft: false
 ---
 # 第七节——值函数近似
