--- a/src/content/posts/第三节.md
+++ b/src/content/posts/第三节.md
@@ -1,9 +1,9 @@
 ---
-title: 强化学习第三节
+title: 强化学习
 published: 2024-05-14
 description: 强化学习相关概念
-tags: [概念积累, 网络安全, 强化学习DL]
-category: DL
+tags: [概念积累, 网络安全, 强化学习RL]
+category: RL
 draft: false
 ---
 # 第三节——值迭代与策略迭代
@@ -19,7 +19,7 @@ $$
 
 就是压缩映射中求解贝尔曼最优公式的方法，该算法包含两部分，已知$v_k$
 
-- 策略更新，选择最优策略(该步骤是贪心的)
+- 策略更新，选择最优策略(即选择行动值最大的动作，故该步骤是贪心的 )
   $$
   \pi_{k+1} = \arg \max_{\pi}(r_{\pi} + \gamma P_{\pi}v_k)
   $$
@@ -29,11 +29,13 @@ $$
   v_{k+1} = r_{\pi_{k+1}}+\gamma P_{\pi_{k+1}}v_k
   $$
 
+![image-20240609101610626](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240609101610626.png)
+
 ## 2.策略迭代算法
 
 从初始策略$\pi_0$开始，分为两步
 
-- 第一步：值评估policy evaluation
+- 第一步：策略评估policy evaluation
   $$
   v_{\pi_k} = r_{\pi_k} + \gamma P_{\pi_k}v_{\pi_k}
   $$
@@ -44,9 +46,7 @@ $$
   $$
   
 
-$$
-
-$$
+![image-20240609154832049](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240609154832049.png)
 
 ## 3.截断策略迭代算法（Truncated policy iteration algorithm）
 
@@ -60,4 +60,8 @@ $$
 - 当$j = 1$时，截断策略迭代算法就转换为了值迭代算法，当$j = \infty$时，就变为了策略迭代算法
 
 
+
+# 本节代码示例
+
+[2_Iteration(github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/2_Iteration)
 
