--- a/src/content/posts/第二节.md
+++ b/src/content/posts/第二节.md
@@ -1,10 +1,9 @@
 ---
-title: 强化学习
+title: 强化学习第二节
 published: 2024-05-13
-update: 2024-06-08
 description: 强化学习相关概念
-tags: [概念积累, 网络安全, 强化学习DL]
-category: DL
+tags: [概念积累, 网络安全, 强化学习RL]
+category: RL
 draft: false
 ---
 # 第二节——贝尔曼公式
@@ -126,6 +125,9 @@ $$
 
 ## 4.贝尔曼最优公式
 
+- 贝尔曼公式用于 **评估策略**，你给出一个策略，它就计算该策略的价值。
+- 贝尔曼最优公式用于 **寻找最优策略**，你给出一个游戏环境，它就找到在这个环境下最优的策略。
+
 $$
 \begin{aligned}
 v_\pi(s) 
@@ -164,3 +166,6 @@ $$
 - 唯一性：不动点唯一
 - 可求性（有一种算法能求）：有序列$\{x_k\}$且$X_{k+1} = f(x_k)$, 当$k\to \infty$则$x_k \to x^* $，收敛越来越块
 
+# 本节代码
+
+[PasserByNaOH——RL_Learing (github.com)](https://github.com/PasserByNaOH/RL_Learing/blob/master/MDP/Bellman.ipynb)
