--- a/src/content/posts/第六节.md
+++ b/src/content/posts/第六节.md
@@ -2,13 +2,15 @@
 title: 强化学习第六节
 published: 2024-05-26
 description: 强化学习相关概念
-tags: [概念积累, 网络安全, 强化学习DL]
-category: DL
+tags: [概念积累, 网络安全, 强化学习RL]
+category: RL
 draft: false
 ---
 # 第六节——时序差分方法
 
 ## 1.TD（Time Distribution）算法
+
+本质上是，**时序差分是从当前状态到下一个状态的奖励和下一个状态的估计值来更新当前状态的估计值。**
 
 **TD算法是一个基于数据的算法**，以下形式的数据（data/experience）由策略$\pi$得出
 $$
@@ -128,7 +130,7 @@ $$
 ### 定义
 
 $$
-q_{t+1}(s_t,a_t)=q_t(s_t,a_t)-\alpha_t(s_t,a_t)[q_t(s_t,a_t)-[r_[t+1]+\gamma \max_{a\in A}q_t(s_{t+1},a)]] \\
+q_{t+1}(s_t,a_t)=q_t(s_t,a_t)-\alpha_t(s_t,a_t)[q_t(s_t,a_t)-[r_{t+1}+\gamma \max_{a\in A}q_t(s_{t+1},a)]] \\
 q_{t+1}(s,a)=q_t(s,a), \forall(s,a)\ne(s_t,a_t)
 $$
 
@@ -136,6 +138,8 @@ $$
 $$
 q(s,a)=\mathbb{E}[R_{t+1}+\gamma \max_aq(S_{t+1},a)|S_t=s,A_t=a], \forall s,a
 $$
+![image-20240603113053826](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240603113053826.png)
+
 ### **有关策略的概念**
 
 - behavior policy: 和环境进行交互然后生成数据样本（experience）
