--- a/src/content/posts/第二节.md
+++ b/src/content/posts/第二节.md
@@ -168,4 +168,4 @@ $$
 
 # 本节代码
 
-[PasserByNaOH——RL_Learing (github.com)](https://github.com/PasserByNaOH/RL_Learing/blob/master/MDP/Bellman.ipynb)
+[1_Bellman(github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/1_Bellman)
