--- a/src/content/posts/第七节.md
+++ b/src/content/posts/第七节.md
@@ -39,6 +39,8 @@ $$
 
   - 表示为$\{d_{\pi}(s)\}_{s\in S}$，$d_{\pi}(s)$表示agent在s出现的概率
 
+  - 平稳状态变化表示为$d_{\pi}^T = d_{\pi}^T · P_{\pi}$
+  
   - 则在该条件下，目标函数可表示为
     $$
     J(w)=\mathbb{E}[(v_{\pi}(S)-\hat{v}(S,w))^2]=\sum_{s\in S}d_{\pi}(s)(v_{\pi}(S)-\hat{v}(S,w))^2
@@ -61,11 +63,14 @@ $$
 对于$v_{\pi}(s_t)$的替代有两种方法
 
 - MC learning：用$g_t$代替，它为一个episode的discounted return，作为估计值
+
 - TD learning：用$r_{t+1}+\gamma \hat{v}(s_{t+1},w_t)$代替 
+
+  ![image-20240617172618649](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240617172618649.png)
 
 ### 线性函数近似
 
-此时，$\hat{v}(s,w)=\phi(s)w$，则有$\nabla_w\hat{v}(s,w)=\phi(s)$
+此时，$\hat{v}(s,w)=\phi(s)w$，则有$\nabla_w\hat{v}(s,w)=\phi(s)$，$\phi(s)$表示特征向量
 $$
 w_{t+1}=w_{t}+2\alpha_t[r_{t+1}+\gamma \phi^T(s_{t+1})w_t-\phi^T(s_{t})w_t]\phi(s_t)
 $$
@@ -128,6 +133,7 @@ $$
 使用两个网络的原因
 
 - 计算梯度比较复杂，先固定一个（目标网络）再计算另一个（主网络） 
+- 由于目标一直在变化，用单个网络评估会很困难
 
 **方法2：经验回放(Experience replay)**
 
@@ -152,3 +158,10 @@ $$
   - 提高样本效率
 
 ![image-20240530112638740](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240530112638740.png)
+
+- 由于是off-policy，则不需要策略更新
+
+# 本节代码
+
+[6_ValueApproximation (github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/6_ValueApproximation)
+[6_ValueApproximation (gitee.com)](https://gitee.com/PasserByNaOH/RL_Learing/tree/master/6_ValueApproximation)
