--- a/src/content/posts/第三节.md
+++ b/src/content/posts/第三节.md
@@ -61,6 +61,10 @@ $$
 
 
 
+![image-20240611100403795](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240611100403795.png)
+
+
+
 # 本节代码示例
 
 [2_Iteration(github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/2_Iteration)
