--- a/src/content/posts/第五节.md
+++ b/src/content/posts/第五节.md
@@ -24,17 +24,18 @@ w_{k+1}=w_{k}-\alpha_k(w_k-x_k), \ \ \alpha_k > 0
 $$
 此时$w_k$依然趋近于原平均值，该式是一个特殊的RM算法
 
-## 2.RM（Robbins-Monro） Algorithm
+## 2.RM（Robbins-Monro） Algorithm（随机逼近算法）
 
+核心目标就是寻找一个 **未知表达式函数的零点**，这个函数必须是递增的
 $$
 w_{k+1}= w_k - a_k \widetilde{g}(w_k,\eta_k),k=1,2,3,...
 $$
 
 其中，
 
-- $w_k$表示对平均值的第k次估计
-- $\widetilde{g}(w_k,\eta_k)=g(w_k)+\eta_k$表示带有噪音的一个观测
-- $a_k$>0
+- $w_k$表示对零点的第k次估计
+- $\widetilde{g}(w_k,\eta_k)=g(w_k)+\eta_k$表示带有噪音的一个观测（即观测值含有噪声）
+- $a_k$>0，称为步长，控制迭代的速度
 
 该算法并不知道$g(w)$到底是什么（即是一个黑盒），算法依赖于以下数据
 
@@ -84,10 +85,14 @@ $$
 
 $$
 w_{k+1} = w_{k} - \alpha_k\frac{1}{n}\sum^n_{i=1}\nabla_wf(w_k,x_i) （BGD） \\
-w_{k+1} = w_{k} - \alpha_k\frac{1}{m}\sum^n_{j\in\mathcal{I}_k}\nabla_wf(w_k,x_i) （MGBD） \\
+w_{k+1} = w_{k} - \alpha_k\frac{1}{m}\sum^n_{j\in\mathcal{I}_k}\nabla_wf(w_k,x_i) （MBGD） \\
 w_{k+1} = w_{k} - \alpha_k\nabla_wf(w_k,x_i)（SGD）
 $$
 
 - BGD用了所有的采样，MBGD用所有采样中的一小部分，SGD随机用采样中的一个数据
 - 相比于SGD，MBGD的随机性小于SGD
 - 相比于BGD，MBGD随机性要大一些，要更加灵活和高效
+
+# 本文代码
+
+[4_SGD(github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/4_SGD)
