--- a/src/content/posts/第八节.md
+++ b/src/content/posts/第八节.md
@@ -1,5 +1,5 @@
 ---
-title: 强化学习第八节
+title: 强化学习第七节
 published: 2024-05-31
 description: 强化学习相关概念
 tags: [概念积累, 网络安全, 强化学习RL]
@@ -56,25 +56,26 @@ $$
   $$
   \bar{v}_{\pi}=\mathbb{E}[v_{\pi}(S)]
   $$
+  
+- 
 
 **概率分布d的选取**
 
 1. d独立于策略$\pi$
-   - 认为所有状态均匀分布
+   - 认为所有状态均匀分布，即认为每一个状态都是同等重要的
    - 可能特别关心某个状态
 2. d依赖于策略$\pi$
    - 此时d为stationary distribution
-
-
+     - 访问多的状态，权重$d_\pi(s)$会大
+     - 反之，则小
 
 ## 3.平均单步奖励值average one-step reward
 
 **第一种表现形式**：
 $$
 \begin{align}
-\bar{r}_{\pi} &=\sum_{s \in S}d_{\pi}(s)r_{\pi}(s)=\mathbb{E}[r_{\pi}(S)] \\
-r_{\pi}(s) &=\sum_{a \in A}\pi(a|s)r(s,a)
-
+\bar{r}_{\pi} &\doteq \sum_{s \in S}d_{\pi}(s)r_{\pi}(s)=\mathbb{E}[r_{\pi}(S)] \\
+r_{\pi}(s) &\doteq \sum_{a \in A}\pi(a|s)r(s,a)
 \end{align}
 $$
 其中，
@@ -104,16 +105,19 @@ $$
 
 以上式子还可以写成以下，这个是真实的梯度
 $$
-\nabla_{\theta}J(\theta)=\mathbb{E}[\nabla \ln \pi(A|S,\theta)q_{\pi}(S,A)]
+\nabla_{\theta}J(\theta)=\mathbb{E}[\nabla_{\theta} \ln \pi(A|S,\theta)q_{\pi}(S,A)]
 $$
 其中，
 
 - 由于对数函数的性质，$\pi(A|S,\theta)>0$
-  - 为了实现以上性质，使用softmax函数将其归一化
+  - 为了实现以上性质，使用softmax函数将其归一化 
   - 使用神经网络来实现
   - 该式是随机且具有探索性的
 
-
+使用随机梯度代替真实梯度
+$$
+\nabla_{\theta}J \approx \nabla_{\theta} \ln \pi(A|S,\theta)q_{\pi}(S,A)
+$$
 
 ## 5.梯度上升算法
 
@@ -131,6 +135,10 @@ $$
   $$
   \theta_{t+1} =\theta_{t}+\alpha\nabla_{\theta}\ln\pi(a_t|s_t,\theta_t)q_{\pi}(s_t,a_t)
   $$
+  
+  - 对于无法计算的$q_{\pi}(s_t, a_t)$
+    - 使用蒙特卡洛方法，得到一个episode，用这个episode里的$q_t(s,a)$来估计$q_{\pi}(s_t, a_t)$
+    - 使用TD等方法	
 
 **对于采样问题**
 
@@ -169,3 +177,9 @@ $$
 即用$q_{t}(s_t,a_t)近似q_{\pi}(s_t,a_t)$
 
 ![image-20240531162037981](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240531162037981.png)
+
+# 本节代码
+
+[7_PolicyGradient(github.com)](https://github.com/PasserByNaOH/RL_Learing/blob/master/7_PolicyGradient/REINFORCE.ipynb)
+
+[7_PolicyGradient(gitee.com)](https://gitee.com/PasserByNaOH/RL_Learing/blob/master/7_PolicyGradient/REINFORCE.ipynb)
