--- a/src/content/posts/第六节.md
+++ b/src/content/posts/第六节.md
@@ -106,11 +106,20 @@ $$
 $$
 \mathbb{E}[q_t(s_{t+1},A)]=\sum_a \pi_t(a|s_{t+1})q_t(s_{t+1},a)=v_t(s_{t+1})
 $$
+**Expected Sarsa 使用期望值更新 Q 值**：
+
+- 它计算下一状态所有可能的动作的期望 Q 值，而不是像 Sarsa 一样只使用实际选择的动作。
+- 计算期望值需要遍历所有可能的动作，并使用策略的概率来加权每个动作的 Q 值。
+
 Expected Sarsa算法本质上还是从求解一个贝尔曼公式得来,贝尔曼公式如下
 $$
 q_{\pi}(s,a)=\mathbb{E}[R_{t+1}+\gamma v_{\pi}(S_{t+1})|S_t=s,A_t=a]
 $$
 由于和Sarsa算法一样是求解一个指定状态到达目标状态的最优路径，所以其他状态的最优路径不一定能够得到
+
+
+
+缺点：动作越多，计算量越大
 
 ## 4.n-step Sarsa
 
@@ -140,6 +149,8 @@ q(s,a)=\mathbb{E}[R_{t+1}+\gamma \max_aq(S_{t+1},a)|S_t=s,A_t=a], \forall s,a
 $$
 ![image-20240603113053826](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240603113053826.png)
 
+![image-20240616154435280](https://raw.githubusercontent.com/PasserByNaOH/PicGo/main/blogPic/image-20240616154435280.png)
+
 ### **有关策略的概念**
 
 - behavior policy: 和环境进行交互然后生成数据样本（experience）
@@ -161,3 +172,9 @@ Sarsa、MC是on-policy、Q-learing是off-policy
 
 - 判断该算法在数学上是解决什么问题
 - 该算法运行需要的条件有哪些
+
+
+
+# 本文代码
+
+[5_TD(github.com)](https://github.com/PasserByNaOH/RL_Learing/tree/master/5_TD)
