--- a/src/content/posts/第一节.md
+++ b/src/content/posts/第一节.md
@@ -1,6 +1,6 @@
 ---
-title: 强化学习
-published: 2024-05-13
+title: 强化学习第一节
+published: 2024-05-12
 description: 强化学习相关概念
 tags: [概念积累, 网络安全, 强化学习RL]
 category: RL
